quark/test/quark/AST/Errors/fieldNotExists-001.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

type Car {
  a i32
}

fn foo: -> i32 {
  var car : Car;
  car.b;
}
// CHECK:Error: Field does not exists
